# maliput_sparse-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
.github/workflows/: build.yml  sanitizers.yml  scan_build.yml
debian/: changelog  control  copyright  gbp.conf  rules
include/maliput_sparse/builder/: builder.h
include/maliput_sparse/geometry/: lane_geometry.h  line_string.h
include/maliput_sparse/geometry/utility/: geometry.h
include/maliput_sparse/loader/: builder_configuration.h  config.h  road_geometry_loader.h  road_network_loader.h
include/maliput_sparse/parser/: connection.h  junction.h  lane.h  parser.h  segment.h  validator.h
include/maliput_sparse/test_utilties/: maliput_sparse_types_compare.h
src/: CMakeLists.txt
src/base/: CMakeLists.txt  lane.cc  lane.h  road_geometry.cc  road_geometry.h
src/builder/: CMakeLists.txt  builder.cc
src/geometry/: CMakeLists.txt  lane_geometry.cc  line_string.cc
src/geometry/utility/: geometry.cc
src/loader/: CMakeLists.txt  builder_configuration.cc  road_geometry_loader.cc  road_network_loader.cc
src/parser/: CMakeLists.txt  connection.cc  lane.cc  validation_methods.h  validator.cc
src/test_utilities/: CMakeLists.txt  maliput_sparse_types_compare.cc
test/: CMakeLists.txt
test/base/: CMakeLists.txt  lane_test.cc  road_geometry_test.cc
test/builder/: CMakeLists.txt  builder_test.cc
test/geometry/: CMakeLists.txt  lane_geometry_test.cc  line_string_test.cc
test/geometry/utility/: geometry_test.cc
test/parser/: CMakeLists.txt  lane_test.cc  segment_test.cc  validator_test.cc
